<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".NrArfcnActivity">

    <ImageButton
        android:id="@+id/btnNrArfcnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="216dp"
        android:background="@color/colorBackgroundButton"
        android:tint="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/btnNrArfcnVoltar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <TextView
        android:id="@+id/txtFrequencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:hint="@string/nr_arfcn_result_text"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNrArfcnCalc" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:text="@string/nr_arfcn_info_message"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/edtNrArfcnNrArfcn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.152" />

    <EditText
        android:id="@+id/edtNrArfcnNrArfcn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nr_arfcn"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btnNrArfcnCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.157" />

    <Button
        android:id="@+id/btnNrArfcnCalc"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundButton"
        android:text="@string/nr_arfcn_button_text"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/txtFrequencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNrArfcnNrArfcn"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="KPI Calculator"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.151" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_5g" />

    <ImageButton
        android:id="@+id/btnNrArfcnVoltar"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorBackgroundButton"
        android:src="@drawable/abc_vector_test"
        android:tint="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>