<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".FrequenciaActivity">

    <ImageButton
        android:id="@+id/btnFrequenciaVoltar"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorBackgroundButton"
        android:src="@drawable/abc_vector_test"
        android:tint="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:text="@string/frequency_info_message"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/edtFrequencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="KPI Calculator"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_5g" />

    <Button
        android:id="@+id/btnFrequenciaCalc"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundButton"
        android:text="@string/frequency_button_text"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/txtNrArfnc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFrequencia" />

    <TextView
        android:id="@+id/txtNrArfnc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:hint="NR ARFCN"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFrequenciaCalc" />

    <EditText
        android:id="@+id/edtFrequencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/frequency_hint_message"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btnFrequenciaCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageButton
        android:id="@+id/btnFrequenciaInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="216dp"
        android:background="@color/colorBackgroundButton"
        android:tint="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/btnFrequenciaVoltar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

</androidx.constraintlayout.widget.ConstraintLayout>